<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgound">




    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fn"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ln"/>

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/mb"
        />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/pas"
        />

    <EditText
        android:id="@+id/editTextText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/cp" />

    <EditText
        android:id="@+id/editTextText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/etstyle"
        android:backgroundTint="@color/e1b"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ck"
        />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hyperlink" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/b1"
        android:backgroundTint="@color/yellow"
        android:padding="16dp"
        android:text="@string/a3"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:text="@string/el" />


</LinearLayout>