<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:src="@drawable/c1">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_picture"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_size"
                android:textSize="10sp"
                android:textColor="@color/black">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                    <ImageView
                        android:id="@+id/im2"
                        android:layout_width="16dp"
                        android:layout_height="18dp"
                        android:src="@drawable/bookmark"
                        android:layout_marginLeft="2dp"/>


                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number2"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginLeft="4dp"/>


                    <ImageView
                        android:id="@+id/im3"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/chat"
                        android:layout_marginLeft="2dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>