<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    android:orientation="vertical"
    tools:context=".individualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            app:title="Individual Page"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:orientation="vertical"
            android:paddingStart="15dp"
              android:paddingEnd="15dp">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fn"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/etstyle"
                android:backgroundTint="@color/e1b"
                android:ems="10"
                android:inputType="text"

                android:padding="10dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:text="@string/ln"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/etstyle"
                android:backgroundTint="@color/e1b"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:text="@string/mb"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/etstyle"
                android:backgroundTint="@color/e1b"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:text="@string/email"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/etstyle"
                android:backgroundTint="@color/e1b"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pas"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/etstyle" />

        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextText11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/etstyle"
                    android:backgroundTint="@color/e1b"
                    android:ems="10"
                    android:layout_marginEnd="46dp"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <ImageView
                    android:id="@+id/showhidepass1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="@color/e1b"

                   />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/cp"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            style="@style/card"
            android:layout_marginTop="4dp">

            <RelativeLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextText12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/etstyle"
                    android:backgroundTint="@color/e1b"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <ImageView
                    android:id="@+id/showhidepass2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/e1b"
                    />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/yellow">

                    </CheckBox>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ck"
                        android:textColor="@color/black">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/yellow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/hyperlink"
                        android:textColor="@color/black"

                        >

                    </TextView>

                </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/b1"
            android:backgroundTint="@color/yellow"
            android:gravity="center"
            android:text="@string/a3"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/el"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:text="@string/el2"
                android:layout_toEndOf="@id/textView18">

            </TextView>
        </RelativeLayout>
            </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>